test/typecheck/bad-br_on_exn-mismatch.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-exceptions
;;; ERROR: 1
(module
  (event $e)
  (func
    i32.const 0
    br_on_exn 0 $e
    drop))
(;; STDERR ;;;
out/test/typecheck/bad-br_on_exn-mismatch.txt:8:5: error: type mismatch in br_on_exn, expected [exnref] but got [i32]
    br_on_exn 0 $e
    ^^^^^^^^^
;;; STDERR ;;)
